fix: even more actor api changes
